# deskctrl

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  run.py  setup.py
.github/workflows/: release.yml
deskctrl/: __init__.py  __main__.py  cli.py  client.py  clipboard.py  discovery.py  display.py  display_extend.py  gui.py  hdmi_capture.py  input_controller.py  keymap.py  monitor_control.py  platform.py  platform_input.py  protocol.py  server.py  updater.py  virtual_display.py  win32_input.py
deskctrl/drivers/: .gitkeep
scripts/: install.ps1  install.sh  pkg-build.sh  setup.iss
