[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "deskctrl"
dynamic = ["version"]
description = "Cross-platform remote desktop tool — scrcpy for PCs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "deskctrl contributors" }]

dependencies = [
    "click>=8.1",
    "mss>=9.0",
    "Pillow>=10.0",
    "pynput>=1.7",
    "numpy>=1.24",
]

[project.optional-dependencies]
qt = ["PyQt6>=6.5"]
pygame = ["pygame>=2.5"]
clipboard = ["pyperclip>=1.8"]
discovery = ["zeroconf>=0.131"]
hdmi = ["opencv-python-headless>=4.8"]
windows = []   # win32_input uses stdlib ctypes only
all = [
    "deskctrl[qt,pygame,clipboard,discovery,hdmi]",
]

[project.scripts]
deskctrl = "deskctrl.cli:main"

[tool.setuptools.dynamic]
version = { attr = "deskctrl.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["deskctrl*"]

[tool.setuptools.package-data]
"deskctrl" = ["drivers/*.zip"]
